# expedition-pwa

./: .gitignore  AGENTS.md
docs/: index.html  index.html.bak  index_minimal.html  manifest.json  sw.js
src-tauri/: AndroidManifest.xml  CLAUDE.md  Cargo.toml  classes.dex  kotlin-tooling-metadata.json  resources.arsc  tauri.conf.json
src-tauri/assets/: tauri.conf.json
src-tauri/assets/dexopt/: baseline.prof  baseline.profm
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
